Uploaded image for project: 'Core ReactOS'
  1. Core ReactOS
  2. CORE-18988

ReactOS 2nd stage failure when installing to a very long path name

    XMLWordPrintable

Details

    Description

      When entering a very long install destination like

      C:\ReactOS123456789ABCDEFGHIJKLMNOPQRSTUVWXYZ
      

      Then the 2nd stage setup fails during the device installation with the following error box.
      0.4.15-dev-6083-gd3164a0_2ndStageFailure.png
      0.4.15-dev-6083-gd3164a0_2ndStageFailure.log

      For the record: I tested: all the Release-branches at least down to releases/0.4.7 are affected the very same way.

      Please get me right, I don't necessarily want us to enlargen all the buffers that might be involved everywhere, because it is very likely that 3rd party apps will have problems with a very long %Systemroot% no matter how ReactOS performs itself, but
      I would at least expect us to reject the installation at 1st stage when a path exceeding the maxlength that we can handle was entered

      Attachments

        Issue Links

          Activity

            People

              zecarlos1957 zecarlos1957
              reactosfanboy reactosfanboy
              Votes:
              0 Vote for this issue
              Watchers:
              3 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved: